examples/test/testpolicy2832.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2832
  namespace: namespace231
spec:
  podSelector:
    matchLabels:
      key38: value30
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key48: value9
          key19: value38
      podSelector:
        matchLabels:
          key32: value3
          key16: value16
